Fix notes spacing problem, edit notes seeder, adjust css style

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -249,7 +249,7 @@ a {
 /*# Dashboard styling*/
 
 .ul-fontSize {
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .search-bar {
